syntax = "proto3";

package Contracts.Services.Catalog.Protobuf;

import "Abstractions/Abstractions.proto";

service CatalogService {
  rpc GetCatalogItemDetails(GetCatalogItemDetailsRequest) returns (Abstractions.Protobuf.GetResponse);
  rpc ListCatalogsGridItems(ListCatalogsGridItemsRequest) returns (Abstractions.Protobuf.ListResponse);
  rpc ListCatalogItemsCards(ListCatalogItemsCardsRequest) returns (Abstractions.Protobuf.ListResponse);
  rpc ListCatalogItemsListItems(ListCatalogItemsListItemsRequest) returns (Abstractions.Protobuf.ListResponse);
}

// Requests

message ListCatalogsGridItemsRequest {
  Abstractions.Protobuf.Paging Paging = 1;
}

message ListCatalogItemsListItemsRequest {
  string CatalogId = 1;
  Abstractions.Protobuf.Paging Paging = 2;
}

message ListCatalogItemsCardsRequest {
  string CatalogId = 1;
  Abstractions.Protobuf.Paging Paging = 2;
}

message GetCatalogItemDetailsRequest {
  string CatalogId = 1;
  string ItemId = 2;
}

// Projections

message CatalogGridItem {
  string CatalogId = 1;
  string Title = 2;
  string Description = 3;
  string ImageUrl = 4;
  bool IsActive = 5;
}

message CatalogItemListItem {
  string CatalogId = 1;
  string ItemId = 2;
  string ProductName = 3;
}

message CatalogItemCard {
  string CatalogId = 1;
  string ItemId = 2;
  Abstractions.Protobuf.Product Product = 3;
  string Description = 4;
  string ImageUrl = 5;
  Abstractions.Protobuf.Money UnitPrice = 6;
}

message CatalogItemDetails {
  string CatalogId = 1;
  string ItemId = 2;
  string Description = 3;
  string ImageUrl = 4;
  Abstractions.Protobuf.Product Product = 5;
  Abstractions.Protobuf.Money UnitPrice = 6;
}